--- a/FrontEnd/templates/FrontEnd/base/nav.html
+++ b/FrontEnd/templates/FrontEnd/base/nav.html
@@ -13,7 +13,7 @@
                         大勵客基地
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown1">
-                        <a class="dropdown-item" href="{%url 'classshow' 6 %}">召集人</a>
+                        <a class="dropdown-item" href="{%url 'thesingle' 'Group' 6 %}">召集人</a>
                         <a class="dropdown-item" href="{%url 'members_intro' %}">成員</a>
                         <a class="dropdown-item" href="{%url 'position' %}">位置</a>
                     </div>
@@ -24,11 +24,11 @@
                         專業領域小組
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown2">
-                        <a class="dropdown-item" href="{%url 'classshow' 5 %}">智慧製造</a>
-                        <a class="dropdown-item" href="{%url 'classshow' 2 %}">資訊通</a>
-                        <a class="dropdown-item" href="{%url 'classshow' 3 %}">機器人</a>
-                        <a class="dropdown-item" href="{%url 'classshow' 4 %}">創課</a>
-                        <a class="dropdown-item" href="{%url 'classshow' 1 %}">元宇宙</a>
+                        <a class="dropdown-item" href="{%url 'thesingle' 'Group' 5 %}">智慧製造</a>
+                        <a class="dropdown-item" href="{%url 'thesingle' 'Group' 2 %}">資訊通</a>
+                        <a class="dropdown-item" href="{%url 'thesingle' 'Group' 3 %}">機器人</a>
+                        <a class="dropdown-item" href="{%url 'thesingle' 'Group' 4 %}">創課</a>
+                        <a class="dropdown-item" href="{%url 'thesingle' 'Group' 1 %}">元宇宙</a>
                     </div>
                 </li>
                 <li class="nav-item">
