--- a/FrontEnd/templates/FrontEnd/professional_field_section/professional_field_section.html
+++ b/FrontEnd/templates/FrontEnd/professional_field_section/professional_field_section.html
@@ -1,13 +1,13 @@
-<section class="professional">
+<section class="professional overflow-hidden">
     <div class="container">
         <section>
             <h2 class="title text-center">專業領域小組</h2>
             <div class="row" style="height:50vh">
-                <a href="{% url 'members_intro' %}" class="col-sm-6 bg-cover h-100"
+                <a href="{% url 'members_intro' %}" class="col-12 col-sm-6 bg-cover h-100 convener"
                     style="background-image: url(https://picsum.photos/1000/1000?random=8);">
                     <h3 class="professional-title">召集人/副召集人</h3>
                 </a>
-                <div class="col-sm-6">
+                <div class="col-12 col-sm-6">
                     <div class="row" style="height:50vh">
                         <a href="{% url 'classshow' 1 %}" class="col-sm-6 bg-cover h-50"
                             style="background-image: url(https://picsum.photos/1000/1000?random=9);">
@@ -29,7 +29,7 @@
                 </div>
             </div>
         </section>
-        <section>
+        <section class="new-tech">
             <h2 class="title text-center">元宇宙 最新科技</h2>
             <div class="text-center">
                 <img src="https://picsum.photos/1000/1000?random=13" class="img-fluid" alt="最新科技">
