--- a/FrontEnd/templates/FrontEnd/about_us_section/about_us_section.html
+++ b/FrontEnd/templates/FrontEnd/about_us_section/about_us_section.html
@@ -1,7 +1,7 @@
 <section>
     <div class="container-fluid">
         <div class="row">
-            <div class="col-5 about-us-bg-primary">
+            <div class="col-12 col-sm-5 about-us-bg-primary">
                 <h3 class="title">
                     自造者中心
                 </h3>
@@ -15,7 +15,7 @@
                     提供優良設備。設備設備設備設備設備設備設備設備設備設備設備
                 </p>
             </div>
-            <div class="col-7 about-us-bg-secondary">
+            <div class="col-12 col-sm-7 about-us-bg-secondary">
                 <h2 class="title">
                     Maker Center
                 </h2>
