--- a/FrontEnd/templates/FrontEnd/base/header.html
+++ b/FrontEnd/templates/FrontEnd/base/header.html
@@ -1,7 +1,7 @@
 <header>
     <div class="header-wrap">
         <div class="header-bg">
-            <h1><a href="{% url 'index' %}">Big Maker Base </a></h1>
+            <h1><a href="{% url 'index' %}" class="text-decoration-none text-light">Big Maker Base </a></h1>
         </div>
     </div>
 </header>
