--- a/FrontEnd/templates/FrontEnd/professional_field_section/professional_field_section.html
+++ b/FrontEnd/templates/FrontEnd/professional_field_section/professional_field_section.html
@@ -6,7 +6,7 @@
             <div class="row" style="height:50vh">
                 <a href="{% url 'members_intro' %}" class="col-12 col-sm-6 bg-cover h-100 convener"
                     style="background-image:url({% static 'img/index/host.jpg' %})">
-                    <h3 class="professional-title">召集人/副召集人</h3>
+                    <h3 class="professional-title" style="color:black" >召集人/副召集人</h3>
                 </a>
                 <div class="col-12 col-sm-6">
                     <div class="row" style="height:50vh">
