調整字體大小

--- a/FrontEnd/templates/FrontEnd/about_us_section/about_us_section.html
+++ b/FrontEnd/templates/FrontEnd/about_us_section/about_us_section.html
@@ -5,13 +5,13 @@
                 <h3 class="title">
                     自造者中心
                 </h3>
-                <p>
+                <p class="h3">
                     提供優良設備。設備設備設備設備設備設備設備設備設備設備設備
                 </p>
                 <h4 class="sub-title">
                     副標題
                 </h4>
-                <p>
+                <p class="h3">
                     提供優良設備。設備設備設備設備設備設備設備設備設備設備設備
                 </p>
             </div>
@@ -20,9 +20,9 @@
                     Maker Center
                 </h2>
                 <div class="heightlight">CNC<span>/</span>AVA</div>
-                <h5 class="sub-title">
+                <h4 class="sub-title">
                     眾多優良設備
-                </h5>
+                </h4>
             </div>
         </div>
     </div>
