--- a/static/scss/pages/_professional_field_section.scss
+++ b/static/scss/pages/_professional_field_section.scss
@@ -1,5 +1,6 @@
 .professional {
     .bg-cover {
+        border: solid 2px white;
         background-size: cover;
         background-position: center center;
         position: relative;
