--- a/FrontEnd/templates/FrontEnd/equipment_intro/equipment_intro.html
+++ b/FrontEnd/templates/FrontEnd/equipment_intro/equipment_intro.html
@@ -24,6 +24,7 @@
             <tr class="bg-danger" style="height: auto; ">
                 <th style="width: 30%;">設備名稱</th>
                 <th style="width: 70%;">設備介紹</th>
+                <th style="width: 70%;">設備圖片</th>
             </tr>
         </thead>
         <tbody style="height: auto;">
@@ -31,6 +32,9 @@
                 <td style="text-align: left;">${item.name}</td>
                 <td style="text-align: justify;">
                     ${item.description}</td>
+                <td style="text-align: left;">
+                    <img class="" v-bind:src="item.image" v-bind:alt="item.image" />
+                </td>
             </tr>
         </tbody>
     </table>
