--- a/FrontEnd/templates/FrontEnd/equipment_intro/equipment_intro.html
+++ b/FrontEnd/templates/FrontEnd/equipment_intro/equipment_intro.html
@@ -22,9 +22,9 @@
     <table class="tablestyle" cellpadding="20" style="word-break:break-all;">
         <thead>
             <tr class="bg-danger" style="height: auto; ">
-                <th style="width: 30%;">設備名稱</th>
-                <th style="width: 70%;">設備介紹</th>
-                <th style="width: 70%;">設備圖片</th>
+                <th style="width: 20%;">設備名稱</th>
+                <th style="width: 40%;">設備介紹</th>
+                <th style="width: 40%;">設備圖片</th>
             </tr>
         </thead>
         <tbody style="height: auto;">
@@ -33,7 +33,7 @@
                 <td style="text-align: justify;">
                     ${item.description}</td>
                 <td style="text-align: left;">
-                    <img class="" v-bind:src="item.image" v-bind:alt="item.image" />
+                    <img class="image_1" v-bind:src="item.image" v-bind:alt="item.image" />
                 </td>
             </tr>
         </tbody>
