--- a/FrontEnd/templates/FrontEnd/equipment_intro/equipment_intro.html
+++ b/FrontEnd/templates/FrontEnd/equipment_intro/equipment_intro.html
@@ -24,7 +24,7 @@
             <tr class="bg-danger" style="height: auto; ">
                 <th style="width: 60%;">設備內容</th>
                 <th style="width: 10%;">設備數量</th>
-                <th style="width: 70%;">備註</th>
+                <th style="width: 70%;" class="type-1">備註</th>
             </tr>
         </thead>
         <tbody style="height: auto;">
@@ -39,7 +39,7 @@
                     <!-- ${item.number | linebreaksbr} -->
                     {{ e.number | linebreaksbr}}
                 </td>
-                <td style="text-align: left;">
+                <td style="text-align: left;" class="type-1">
                     <!-- <img class="" v-bind:src="item.image" v-bind:alt="item.image" /> -->
                     <!-- ${item.remark | linebreaksbr} -->
                     {{ e.remark | linebreaksbr}}
