--- a/static/css/equipment_intro/equipment_intro.css
+++ b/static/css/equipment_intro/equipment_intro.css
@@ -25,6 +25,7 @@
     color: #000000;
 }
 
+
 .bg-danger {
     font-size: 28px;
     line-height: 33px;
@@ -51,6 +52,20 @@
     top: 20%;
 }
 
-.image_1 {
-    width: 100%;
+@media (max-width:689px) {
+    .type-1{
+        display: none;
+    }
+
+}
+
+@media (max-width:900px) {
+    img{
+        display: none;
+    }
+
+}
+
+img{
+    max-width:100%;
 }
