正式機圖片

--- a/MakerCenter/staticfiles/scss/all.css
+++ b/MakerCenter/staticfiles/scss/all.css
@@ -7388,4 +7388,4 @@ section {
   .new-tech {
     margin-top: 600px; } }
 
-/*# sourceMappingURL=all.css.map */
+/*# sourceMappingURL=../../../../static/scss/all.css.map */
