--- a/FrontEnd/templates/FrontEnd/space_intro/space_intro.html
+++ b/FrontEnd/templates/FrontEnd/space_intro/space_intro.html
@@ -19,11 +19,11 @@
     <table class="tablestyle" cellpadding="20" style="word-break:break-all;">
         <thead>
             <tr class="bg-danger" style="height: 80px; ">
-                <th style="width: 11%; text-align: center;" class="type-2">教室<br>代碼</th>
-                <th style="width: 19; ">教室名稱</th>
-                <th style="width: 40%; ">空間介紹</th>
+                <th style="width: 13%; text-align: center;" class="type-2">教室<br>代碼</th>
+                <th style="width: 23%; ">教室名稱</th>
+                <th style="width: 38%; ">空間介紹</th>
                 <th style="width: 8%; text-align: center;" class="type-1">容納<br>人數</th>
-                <th style="width: 22%; ">設備資訊</th>
+                <th style="width: 18%; ">設備資訊</th>
             </tr>
         </thead>
         <tbody style="height: auto;">
