--- a/FrontEnd/templates/FrontEnd/equipment_intro/equipment_intro.html
+++ b/FrontEnd/templates/FrontEnd/equipment_intro/equipment_intro.html
@@ -22,20 +22,20 @@
     <table class="tablestyle" cellpadding="20" style="word-break:break-all;">
         <thead>
             <tr class="bg-danger" style="height: auto; ">
-                <th style="width: 52%;">設備內容</th>
-                <th style="width: 10%;">設備數量</th>
-                <th style="width: 38%;" class="type-1">備註</th>
+                <th style="width: 50%;" class="type-3">設備內容</th>
+                <th style="width: 10%;" class="type-2">設備數量</th>
+                <th style="width: 40%;" class="type-1">備註</th>
             </tr>
         </thead>
         <tbody style="height: auto;">
             {% for e in equipment %}
             <!-- v-for="item in ListSearch" -->
-            <tr style="height: auto; line-height: 32px;">
+            <tr style="height: auto; line-height: 32px;"   class="type-3">
                 <td style="text-align: left;">
                     <!-- ${item.content | safe} -->
                     {{ e.content | safe }}
                 </td>
-                <td style="text-align: justify;">
+                <td style="text-align: justify;"  class="type-2">
                     <!-- ${item.number | linebreaksbr} -->
                     {{ e.number | linebreaksbr}}
                 </td>
