--- a/FrontEnd/templates/FrontEnd/space_intro/space_intro.html
+++ b/FrontEnd/templates/FrontEnd/space_intro/space_intro.html
@@ -21,9 +21,9 @@
             <tr class="bg-danger" style="height: 80px; ">
                 <th style="width: 13%; text-align: center;" class="type-2">教室<br>代碼</th>
                 <th style="width: 23%; ">教室名稱</th>
-                <th style="width: 38%; ">空間介紹</th>
+                <th style="width: 32%; ">空間介紹</th>
                 <th style="width: 8%; text-align: center;" class="type-1">容納<br>人數</th>
-                <th style="width: 18%; ">設備資訊</th>
+                <th style="width: 24%; " class="type-3">設備資訊</th>
             </tr>
         </thead>
         <tbody style="height: auto;">
@@ -33,7 +33,7 @@
                 <td style="text-align: justify;">
                     ${item.space_description}</td>
                 <td style="text-align: center;" class="type-1">${item.number}</td>
-                <td style="text-align: justify;">
+                <td style="text-align: justify;" class="type-3">
                     ${item.equipment_description}</td>
             </tr>
         </tbody>
