--- a/static/css/equipment_intro/equipment_intro.css
+++ b/static/css/equipment_intro/equipment_intro.css
@@ -52,7 +52,57 @@
     top: 20%;
 }
 
-@media (max-width:650px) {
+@media (max-width:1620px) {
+    .type-2{
+        width: 12%;
+    }
+
+}
+
+@media (max-width:1353px) {
+    .type-2{
+        width: 13%;
+    }
+
+}
+
+@media (max-width:1250px) {
+    .type-2{
+        width: 14%;
+    }
+
+}
+
+@media (max-width:1163px) {
+    .type-2{
+        width: 15%;
+    }
+
+}
+
+@media (max-width:1088px) {
+    .type-2{
+        width: 17%;
+    }
+
+}
+@media (max-width:1020px) {
+    .type-2{
+        width: 18%;
+    }
+}
+@media (max-width:910px) {
+    .type-2{
+        width: 20%;
+    }
+}
+@media (max-width:820px) {
+    .type-2{
+        width: 22%;
+    }
+}
+
+@media (max-width:747px) {
     .type-1{
         display: none;
     }
@@ -60,6 +110,7 @@
 }
 
 @media (max-width:1300px) {
+
     img{
         display: none;
     }
