--- a/static/css/space_intro/space_intro.css
+++ b/static/css/space_intro/space_intro.css
@@ -51,15 +51,34 @@
     top: 20%;
 }
 
+
+@media (max-width:1670px) {
+    .type-1{
+        width: 10%;
+    }
+}
 @media (max-width:1440px) {
     .type-1{
         display: none;
     }
-
 }
-@media (max-width:1150px) {
+@media (max-width:1516px) {
+    .type-2{
+        width: 16%;
+    }
+}
+@media (max-width:1237px) {
+    .type-2{
+        width: 18%;
+    }
+}
+@media (max-width:1070px) {
     .type-2{
         display: none;
     }
-
+}
+@media (max-width: 480px) {
+    .type-3{
+        display: none;
+    }
 }
