--- a/FrontEnd/templates/FrontEnd/equipment_intro/equipment_intro.html
+++ b/FrontEnd/templates/FrontEnd/equipment_intro/equipment_intro.html
@@ -30,7 +30,7 @@
         <tbody style="height: auto;">
             {% for e in equipment %}
             <!-- v-for="item in ListSearch" -->
-            <tr style="height: auto; line-height: 32px;"   class="type-3">
+            <tr style="height: auto; line-height: 32px;"   class="bg-danger-1">
                 <td style="text-align: left;">
                     <!-- ${item.content | safe} -->
                     {{ e.content | safe }}
