--- a/static/css/space_intro/space_intro.css
+++ b/static/css/space_intro/space_intro.css
@@ -82,3 +82,39 @@
         display: none;
     }
 }
+
+
+@media (max-width: 1280px) {
+    .bg-danger {
+        font-size: 24px;
+        line-height: 27px;
+    }
+    .bg-danger-1{
+        font-size: 21px;
+        line-height: 24px;
+    }
+    .title-1 {
+        font-size: 40px;
+        line-height: 46px;
+    }
+}
+
+@media (max-width: 767px) {
+    .bg-danger {
+        font-size: 20px;
+        line-height: 23px;
+    }
+    .bg-danger-1{
+        font-size: 18px;
+        line-height: 21px;
+    }
+    .title-1 {
+        font-size: 30px;
+        line-height: 35px;
+    }
+}
+@media (max-width: 416px) {
+    .type-4{
+        max-width: 12%;
+    }
+}
