--- a/FrontEnd/templates/FrontEnd/members_intro/members_intro.html
+++ b/FrontEnd/templates/FrontEnd/members_intro/members_intro.html
@@ -19,8 +19,8 @@
 
     <table class="tablestyle" cellpadding="20" style="word-break:break-all;">
         <thead>
-            <tr class="bg-danger" style="height: 100px; ">
-                <th style="width: 11%;">姓名</th>
+            <tr class="bg-danger" style="height: auto; ">
+                <th style="width: 11%;" class="type-3">姓名</th>
                 <th style="width: 20%;" class="type-2">分機</th>
                 <th style="width: 24%;">信箱</th>
                 <th style="width: 27%;">業務職掌</th>
@@ -28,8 +28,8 @@
             </tr>
         </thead>
         <tbody style="height: auto;">
-            <tr style="height: auto; line-height: 32px;" v-for="item in MemeberListSearch">
-                <td style="text-align: left;">${item.name}</td>
+            <tr style="height: auto; line-height: 32px;" v-for="item in MemeberListSearch" class="bg-danger-1">
+                <td style="text-align: left;" class="type-3">${item.name}</td>
                 <td style="text-align: justify;" class="type-2">${item.extension}</td>
                 <td style="text-align: justify;">${item.email}</td>
                 <td style="text-align: justify;">${item.work}</td>
