--- a/static/css/base_single/base_single.css
+++ b/static/css/base_single/base_single.css
@@ -51,3 +51,17 @@
 .table {
     border: none;
 }
+
+@media (max-width: 1280px) {
+    .title-1 {
+        font-size: 40px;
+        line-height: 46px;
+    }
+}
+
+@media (max-width: 767px) {
+    .title-1 {
+        font-size: 34px;
+        line-height: 38spx;
+    }
+}
