--- a/static/css/download/download.css
+++ b/static/css/download/download.css
@@ -181,3 +181,33 @@
     }
 
 }
+
+@media (max-width: 1280px) {
+    .bg-danger {
+        font-size: 24px;
+        line-height: 27px;
+    }
+    .bg-danger-1{
+        font-size: 21px;
+        line-height: 24px;
+    }
+    .rightspace {
+        font-size: 18px;
+        margin-left: -15px;
+    }
+}
+
+@media (max-width: 767px) {
+    .bg-danger {
+        font-size: 20px;
+        line-height: 23px;
+    }
+    .bg-danger-1{
+        font-size: 18px;
+        line-height: 21px;
+    }
+    .rightspace {
+        font-size: 16px;
+        margin-left: -20px;
+    }
+}
