--- a/static/css/members_intro/members_intro.css
+++ b/static/css/members_intro/members_intro.css
@@ -57,9 +57,47 @@
     }
 
 }
-@media (max-width:1280px) {
+@media (max-width:1320px) {
     .type-2{
         display: none;
     }
 
+}
+
+@media (max-width:915px) {
+    .type-3{
+        width: 13%;
+    }
+
+}
+
+
+@media (max-width: 1280px) {
+    .bg-danger {
+        font-size: 24px;
+        line-height: 27px;
+    }
+    .bg-danger-1{
+        font-size: 21px;
+        line-height: 24px;
+    }
+    .title-1 {
+        font-size: 40px;
+        line-height: 46px;
+    }
+}
+
+@media (max-width: 767px) {
+    .bg-danger {
+        font-size: 20px;
+        line-height: 23px;
+    }
+    .bg-danger-1{
+        font-size: 18px;
+        line-height: 21px;
+    }
+    .title-1 {
+        font-size: 30px;
+        line-height: 35px;
+    }
 }
