--- a/FrontEnd/templates/FrontEnd/base/base.html
+++ b/FrontEnd/templates/FrontEnd/base/base.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{% block title %}{% endblock %}</title>
+    <title>Big Maker</title>
 
     {% load static %}
     <link rel="stylesheet" type="text/css" href="{% static 'css/fontawesome-free-6.0.0-web/css/all.min.css '%}" />
