首頁版面調整

--- a/FrontEnd/templates/FrontEnd/course_introduction_section/course_introduction_section.html
+++ b/FrontEnd/templates/FrontEnd/course_introduction_section/course_introduction_section.html
@@ -1,6 +1,6 @@
 <section>
     <div class="container text-center">
-        <h2 class="title">課程介紹</h2>
+        <h2 class="title" style="line-height: 6rem;">課程介紹</h2>
         <h4 class="sub-title">帶領你親自實作！<span class="hr"> ——— </span>讓你在大學不是只讀書</h4>
     
         <ul class="row list-unstyled course">
