--- a/FrontEnd/templates/FrontEnd/professional_field_section/professional_field_section.html
+++ b/FrontEnd/templates/FrontEnd/professional_field_section/professional_field_section.html
@@ -34,7 +34,7 @@
             <h2 class="title text-center">元宇宙 最新科技</h2>
             <div class="text-center">
             <a href="{% url 'thesingle' 'Group' 1 %}">
-                <img src="{% static 'img/index/FormerUniverse.jpg' %}" style="width: 100%;height: 100%;"
+                <img src="{% static 'img/index/FormerUniverse.jpg' %}" 
                     class="img-fluid" alt="最新科技">
                     </a>
             </div>
