--- a/static/scss/pages/_about_us_section.scss
+++ b/static/scss/pages/_about_us_section.scss
@@ -14,7 +14,7 @@
                 content: "";
                 flex: 1 1;
                 border-bottom: 4px solid white;
-                margin: auto;
+                margin: auto auto auto 30px;
             }
         }
         .title {
