--- a/FrontEnd/templates/FrontEnd/about_us_section/about_us_section.html
+++ b/FrontEnd/templates/FrontEnd/about_us_section/about_us_section.html
@@ -2,19 +2,19 @@
     <div class="container-fluid">
         <div class="row">
             <div class="col-12 col-sm-5 about-us-bg-primary">
-                <h3 class="title">
+                <h3 class="title" style="line-height:6rem; font-size:2.75rem">
                     自造者中心
                 </h3>
-                <p class="h4">
+                <p class="h4" style="line-height:1.75rem ; width: 75%;font-size: 1.3rem; margin-left:12%;">
                     為推動創新自造教育運動，以大學創新基地為基礎，向下扎根推廣自造教育，著眼培養產業創新人才；並串聯與開放相關空間，讓自造者有一個可以相互分享與合作之場域。藉由創意教室和教材的學習，跨領域工作坊之推廣活動，原型製作之創意實踐，以及參與國際鏈結，作為發展推廣社會大眾動手實作之學習基地。
                     <br />
                     <br />
                     基於此背景之下，經教育部核定設置中部創新基地:自造者中心
                 </p>
-                <h4 class="sub-title">
+                <h4 class="sub-title"  style="line-height:6rem; font-size:2.75rem ">
                     理念
                 </h4>
-                <p class="h4">
+                <p class="h4" style="line-height:1.75rem ; width: 75%;font-size: 1.3rem; margin-left:12%;">
                     提供實作設備及空間與中區夥伴學校申請使用，共同推動各項自造教育推動
                     方案，與多位夥伴學校，共同成立中區自造者網絡，並串聯夥伴學校及在地
                     政府資源，規劃共同推動創新自造教育之展覽、競賽、營隊、工作坊、種子
@@ -25,8 +25,8 @@
                 <h2 class="title">
                     Maker Center
                 </h2>
-                <div class="heightlight">CNC<span>/</span>AVA</div>
-                <h4 class="sub-title">
+                <div class="heightlight" style="font-size: 45px;">CNC<span>/</span>AVA</div>
+                <h4 class="sub-title" style="font-size: 45px;">
                     眾多優良設備
                 </h4>
             </div>
