--- a/FrontEnd/templates/FrontEnd/course/course_list.html
+++ b/FrontEnd/templates/FrontEnd/course/course_list.html
@@ -15,7 +15,8 @@
 
 
 <section class="container-0" id="app">
-    <div class="searchspace">
+    <input class="searchbox" type="text" v-model="search" placeholder="Search 課程名稱.." />
+    <!--div class="searchspace"-->
 
         <div class="rightspace">
             <div class="wire">
@@ -35,8 +36,7 @@
                 <p class="content">微學分課程及工作訪</p>
             </div>
 
-        </div>
-        <input class="searchbox" type="text" v-model="search" placeholder="Search 課程名稱.." />
+        <!--/div-->
     </div>
 
     <div class="container-1">
