--- a/FrontEnd/templates/FrontEnd/base/nav.html
+++ b/FrontEnd/templates/FrontEnd/base/nav.html
@@ -8,8 +8,8 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mx-auto">
                 <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle text-dark" href="#" id="navbarDropdown1" role="button"
-                        data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    <a class="nav-link dropdown-toggle text-dark" href="{%url 'thesingle' 'Group' 6 %}" id="navbarDropdown1" role="button"
+                         aria-haspopup="true" aria-expanded="false">
                         大勵客基地
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown1">
@@ -19,8 +19,8 @@
                     </div>
                 </li>
                 <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle text-dark" href="#" id="navbarDropdown2" role="button"
-                        data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    <a class="nav-link dropdown-toggle text-dark" href="{%url 'thesingle' 'Group' 5 %}" id="navbarDropdown2" role="button"
+                         aria-haspopup="true" aria-expanded="false">
                         專業領域小組
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown2">
@@ -35,8 +35,8 @@
                     <a class="nav-link text-dark" href="{%url 'news_list' %}">最新公告</a>
                 </li>
                 <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle text-dark" href="#" id="navbarDropdown3" role="button"
-                        data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    <a class="nav-link dropdown-toggle text-dark" href="{% url 'courselist_gettype' '專業' %}" id="navbarDropdown3" role="button"
+                         aria-haspopup="true" aria-expanded="false">
                         課程列表
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown3">
@@ -46,8 +46,8 @@
                     </div>
                 </li>
                 <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle text-dark" href="#" id="navbarDropdown4" role="button"
-                        data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    <a class="nav-link dropdown-toggle text-dark" href="{%url 'space_intro' %}" id="navbarDropdown4" role="button"
+                         aria-haspopup="true" aria-expanded="false">
                         空間介紹
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown4">
