--- a/FrontEnd/templates/FrontEnd/new_section/new_section.html
+++ b/FrontEnd/templates/FrontEnd/new_section/new_section.html
@@ -1,4 +1,4 @@
-<section class="news" id="app">
+<section class="news" id="app" style="margin-top: 3%;">
     <div class="container-fluid bg-light p-2">
         <div class="container text-center">
             <h2 class="title">最新消息</h2>
