--- a/FrontEnd/templates/FrontEnd/space_intro/space_intro.html
+++ b/FrontEnd/templates/FrontEnd/space_intro/space_intro.html
@@ -11,19 +11,17 @@
 {% block main %}
 
 <section class="container-1" id="app">
-    <div class="title-1">空間介紹</div>
-
     <input class="searchbox" type="text" v-model="search" placeholder="Search ..." />
-
+    <div class="title-1">空間介紹</div>
 
     <table class="tablestyle" cellpadding="20" style="word-break:break-all;">
         <thead>
             <tr class="bg-danger" style="height: 80px; ">
                 <th style="width: 13%; text-align: center;" class="type-2">教室<br>代碼</th>
-                <th style="width: 23%; " class="type-4">教室名稱</th>
+                <th style="width: 23; "  class="type-4">教室名稱</th>
                 <th style="width: 32%; ">空間介紹</th>
                 <th style="width: 8%; text-align: center;" class="type-1">容納<br>人數</th>
-                <th style="width: 24%; " class="type-3">設備資訊</th>
+                <th style="width: 24%; "class="type-3">設備資訊</th>
             </tr>
         </thead>
         <tbody style="height: auto;">
