--- a/static/css/base_single/base_single.css
+++ b/static/css/base_single/base_single.css
@@ -43,21 +43,21 @@
     /*display: flex;  align-items: center; */
 }
 
-.img {
+img {
     display: block;
     margin: auto;
-    width: 100% !important;
-    height: 100% !important;
 }
 
 .table {
     border: none;
 }
-
 @media (max-width: 1280px) {
     .title-1 {
         font-size: 40px;
         line-height: 46px;
+    }
+    img{
+        width: 65% !important;
     }
 }
 
@@ -65,5 +65,8 @@
     .title-1 {
         font-size: 34px;
         line-height: 38spx;
+    }
+    img{
+        width: 100% !important;
     }
 }
