--- a/static/css/course/course_list.css
+++ b/static/css/course/course_list.css
@@ -7,11 +7,12 @@
 .container-1 {
     margin:auto;
     padding-top: 60px;
-    position: relative;
+    /*position: relative;*/
     width: 80%;
     display: flex;
     flex-flow: row wrap;
     justify-content: center;
+    padding-left: 12%;
 }
 
 .searchspace {
@@ -20,26 +21,31 @@
 }
 
 .searchbox {
-    width: 21.49%;
+    width: 14%;
     height: 35px;
-    position: relative;
-    float: left;
+    position: static;
+    margin-top: -45px;
+    float: right;
     background-color: #ffffff;
     border: 1px solid #000000;
     box-sizing: border-box;
     border-radius: 5px;
+    margin-right: 10%;
+    margin-left: 70%;
 }
 
 .rightspace {
-    display: flex;
+    display: block;
     align-items: center;
-    width: auto;
+    width: 196px;
     height: 50%;
-    float: right;
-    position: relative;
+    float: left;
+    position: absolute;
     font-size: 22px;
     line-height: 26px;
     text-shadow: 1px 1px 0.5px rgba(106, 106, 106, 0.67);
+    margin-left: 10%;
+    margin-top: 60px;
 }
 
 .content {
@@ -103,28 +109,28 @@
     text-align: justify;
 }
 
-.wire {
+/*.wire {
     border-right: 2px solid #C4C4c4;
     cursor: pointer;
     display: flex;
     align-items: center;
-}
+}*/
 
 .box {
     cursor: pointer;
     width: 324px;
-    margin-left: 42px;
-    margin-right: 42px;
-    margin-bottom: 30px;
+    margin-left: 26px;
+    margin-right: 26px;
+    margin-bottom: 26px;
     padding: auto;
 }
 
 .coursecolor-1:hover{
-    border: solid #FF4F18 2px;
+    border: solid #FF4F18 3px;
 }
 
 .coursecolor-2:hover{
-    border: solid #449BEB 2px;
+    border: solid #449BEB 3px;
 }
 
 .coursephoto {
@@ -199,17 +205,15 @@
 @media (max-width:497px) {
     .rightspace {
         float: left;
-        margin-bottom: 20px;
+        /*margin-bottom: 20px;*/
     }
     .box{
         margin: auto auto 30px;
     }
-    .searchbox{
+    /*.searchbox{
         width: 70%;
-    }
+    }*/
 }
-
-
 @media (max-width: 1280px) {
     .classdate{
         font-size: 22px;
@@ -226,7 +230,25 @@
         font-size: 24px;
         line-height: 28px;
     }
+    .searchbox {
+        margin-right: 5%;
+    }
+    .container-1 {
+        padding-left: 15%;
+    }
 }
+
+@media (max-width: 991px) {
+    .searchbox {
+        width: 30%;
+    }
+}
+
+/*@media (max-width: 800px) {
+    .container-1 {
+        padding-left: 17%;
+    }
+}*/
 
 @media (max-width: 767px) {
     .classdate{
@@ -240,5 +262,13 @@
     .classtitle {
         font-size: 22px;
         line-height: 26px;
+    }
+    .rightspace {
+        position: relative;
+        float: left;
+        width: auto;
+    }
+    .container-1 {
+        padding-left: 0%;
     }
 }
