--- a/static/css/download/download.css
+++ b/static/css/download/download.css
@@ -4,6 +4,7 @@
     margin: auto;
     padding-top: 30px;
     width: 60%;
+    margin-right: 15%;
 }
 
 .tablestyle {
@@ -26,15 +27,15 @@
 }
 
 .searchbox {
-    width: 24%;
+    width: 14%;
     height: 35px;
-    position: relative;
+    position: static;
+    margin-top: -76px;
+    float: right;
     background-color: #ffffff;
     border: 1px solid #000000;
     box-sizing: border-box;
     border-radius: 5px;
-    display: flex;
-    align-items: center;
 }
 
 .searchtext {
@@ -46,28 +47,31 @@
 }
 
 .rightspace {
-    float: right;
+    float: left;
+    position: absolute;
     font-size: 20px;
     line-height: 23px;
     color: #000000;
-    margin-left: 10px;
-    display: flex;
+    text-align: left;
+    margin-left: -13%;
+    display: block;
     align-items: center;
+    margin-top: 50px;
 }
-.wire {
+/*.wire {
     border-right: 2px solid #C4C4c4;
     cursor: pointer;
     display: flex;
     align-items: center;
     border-radius: 0px;
     margin-right: 5px;
-}
+}*/
 
 .text-1 {
     float: left;
-    width: 140px;
+    /*width: 140px;*/
     height: 28px;
-    margin-right: 8px;
+    /*margin-right: 8px;*/
     display: flex;
     align-items: center;
     justify-content: center;
@@ -83,9 +87,9 @@
 
 .text-2 {
     float: left;
-    width: 50px;
+    /*width: 50px;*/
     height: 28px;
-    margin-right: 8px;
+    /*margin-right: 8px;*/
     display: flex;
     align-items: center;
     justify-content: center;
@@ -101,9 +105,9 @@
 
 .text-3 {
     float: left;
-    width: 155px;
+    /*width: 155px;*/
     height: 28px;
-    margin-right: 8px;
+    /*margin-right: 8px;*/
     display: flex;
     align-items: center;
     justify-content: center;
@@ -119,7 +123,7 @@
 
 .text-4 {
     float: left;
-    width: 130px;
+    /*width: 130px;*/
     height: 28px;
     display: flex;
     align-items: center;
@@ -170,18 +174,16 @@
         text-decoration: underline;
         color: #449BEB;
     }
-    .searchbox{
-        width: 30%;
-    }
 }
 
 @media (max-width:1440px) {
     .type-1{
         display: none;
     }
-
+    .searchbox {
+        margin-right: -5%;
+    }
 }
-
 @media (max-width: 1280px) {
     .bg-danger {
         font-size: 24px;
@@ -194,6 +196,22 @@
     .rightspace {
         font-size: 18px;
         margin-left: -15px;
+    }
+    .searchbox {
+        margin-right: -10%;
+    }
+}
+@media (max-width: 1200px) {
+    .searchbox {
+        margin-right: -15%;
+    }
+}
+@media (max-width: 991px) {
+    .searchbox {
+        width: 40%;
+    }
+    .rightspace {
+        margin-left: -18%;
     }
 }
 
@@ -208,6 +226,12 @@
     }
     .rightspace {
         font-size: 16px;
-        margin-left: -20px;
+        margin-left: 0px;
+        position: relative;
+        float: left;
+        width: auto;
+    }
+    .container-1 {
+        margin: auto;
     }
 }
