--- a/static/css/equipment_intro/equipment_intro.css
+++ b/static/css/equipment_intro/equipment_intro.css
@@ -32,16 +32,18 @@
 }
 
 .searchbox {
-    width: 24%;
+    width: 15%;
     height: 35px;
-    position: relative;
+    position: static;
+    float: right;
     background-color: #ffffff;
     border: 1px solid #000000;
     box-sizing: border-box;
     border-radius: 5px;
-    margin-top: -3%;
+    margin-top: -135px;
     display: flex;
     align-items: center;
+    margin-right: -5%;
 }
 
 .searchtext {
@@ -116,7 +118,6 @@
         width: 15%;
     }
 }
-
 @media (max-width:495px) {
     .type-2{
         width: 20%;
@@ -136,7 +137,6 @@ img{
     max-width:100%;
 }
 
-
 @media (max-width: 1280px) {
     .bg-danger {
         font-size: 24px;
@@ -149,6 +149,9 @@ img{
     .title-1 {
         font-size: 40px;
         line-height: 46px;
+    }
+    .searchbox {
+        margin-right: -16%;
     }
 }
 
@@ -164,5 +167,15 @@ img{
     .title-1 {
         font-size: 30px;
         line-height: 35px;
+        margin-top: 50px;
+    }
+    .searchbox {
+        margin-top: -95px;
+    }
+}
+@media (max-width: 991px) {
+    .searchbox {
+        width: 40%;
+        margin-right: 0%;
     }
 }
