--- a/static/css/members_intro/members_intro.css
+++ b/static/css/members_intro/members_intro.css
@@ -31,16 +31,18 @@
 }
 
 .searchbox {
-    width: 20.57%;
+    width: 15%;
     height: 35px;
-    position: relative;
+    position: static;
+    float: right;
     background-color: #ffffff;
     border: 1px solid #000000;
     box-sizing: border-box;
     border-radius: 5px;
-    margin-top: -3%;
+    margin-top: -135px;
     display: flex;
     align-items: center;
+    margin-right: -2%;
 }
 
 .searchtext {
@@ -63,7 +65,6 @@
     }
 
 }
-
 @media (max-width:915px) {
     .type-3{
         width: 13%;
@@ -85,6 +86,9 @@
         font-size: 40px;
         line-height: 46px;
     }
+    .searchbox {
+        margin-right: -13%;
+    }
 }
 
 @media (max-width: 767px) {
@@ -99,5 +103,16 @@
     .title-1 {
         font-size: 30px;
         line-height: 35px;
+        margin-top: 50px;
+    }
+    .searchbox {
+        margin-top: -95px;
+    }
+}
+
+@media (max-width: 991px) {
+    .searchbox {
+        width: 40%;
+        margin-right: 0%;
     }
 }
