--- a/FrontEnd/templates/FrontEnd/base/nav.html
+++ b/FrontEnd/templates/FrontEnd/base/nav.html
@@ -9,7 +9,7 @@
             <ul class="navbar-nav mx-auto">
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle text-dark" href="{%url 'thesingle' 'Group' 6 %}" id="navbarDropdown1" role="button"
-                         aria-haspopup="true" aria-expanded="false">
+                         aria-haspopup="true" aria-expanded="false" data-toggle="dropdown">
                         大勵客基地
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown1">
@@ -19,8 +19,8 @@
                     </div>
                 </li>
                 <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle text-dark" href="{%url 'thesingle' 'Group' 5 %}" id="navbarDropdown2" role="button"
-                         aria-haspopup="true" aria-expanded="false">
+                    <a class="nav-link dropdown-toggle text-dark" href="{%url 'thesingle' 'Group' 5 %}" id="navbarDropdown1" role="button"
+                         aria-haspopup="true" aria-expanded="false" data-toggle="dropdown">
                         專業領域小組
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown2">
@@ -36,7 +36,7 @@
                 </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle text-dark" href="{% url 'courselist_gettype' '專業' %}" id="navbarDropdown3" role="button"
-                         aria-haspopup="true" aria-expanded="false">
+                         aria-haspopup="true" data-toggle="dropdown" aria-expanded="false">
                         課程列表
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown3">
@@ -47,7 +47,7 @@
                 </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle text-dark" href="{%url 'space_intro' %}" id="navbarDropdown4" role="button"
-                         aria-haspopup="true" aria-expanded="false">
+                         aria-haspopup="true" data-toggle="dropdown" aria-expanded="false"> <!--data-toggle="dropdown"-->
                         空間介紹
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown4">
