--- a/FrontEnd/templates/FrontEnd/base/nav.html
+++ b/FrontEnd/templates/FrontEnd/base/nav.html
@@ -1,3 +1,17 @@
+
+<script>
+
+    function mouseover(url){
+        console.log(url);
+        var intFrameWidth = window.innerWidth;
+        console.log(intFrameWidth);//當前螢幕框度
+        if(intFrameWidth >992){
+            location.href =url;
+        }
+    }
+
+</script>
+
 <div class="container-fluid sticky-top">
     <nav class="navbar navbar-expand-lg navbar-light">
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
@@ -9,7 +23,7 @@
             <ul class="navbar-nav mx-auto">
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle text-dark" href="{%url 'thesingle' 'Group' 6 %}" id="navbarDropdown1" role="button"
-                         aria-haspopup="true" aria-expanded="false" data-toggle="dropdown">
+                         aria-haspopup="true" aria-expanded="false" data-toggle="dropdown" onclick='mouseover("{%url 'thesingle' 'Group' 6 %}")'>
                         大勵客基地
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown1">
@@ -20,7 +34,7 @@
                 </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle text-dark" href="{%url 'thesingle' 'Group' 5 %}" id="navbarDropdown1" role="button"
-                         aria-haspopup="true" aria-expanded="false" data-toggle="dropdown">
+                         aria-haspopup="true" aria-expanded="false" data-toggle="dropdown" onclick='mouseover("{%url 'thesingle' 'Group' 5 %}")'>
                         專業領域小組
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown2">
@@ -36,7 +50,7 @@
                 </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle text-dark" href="{% url 'courselist_gettype' '專業' %}" id="navbarDropdown3" role="button"
-                         aria-haspopup="true" data-toggle="dropdown" aria-expanded="false">
+                         aria-haspopup="true" data-toggle="dropdown" aria-expanded="false" onclick='mouseover("{%url 'courselist_gettype' '專業' %}")'>
                         課程列表
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown3">
@@ -47,7 +61,7 @@
                 </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle text-dark" href="{%url 'space_intro' %}" id="navbarDropdown4" role="button"
-                         aria-haspopup="true" data-toggle="dropdown" aria-expanded="false"> <!--data-toggle="dropdown"-->
+                         aria-haspopup="true" data-toggle="dropdown" aria-expanded="false" onclick='mouseover("{%url 'space_intro' %}")'> <!--data-toggle="dropdown"-->
                         空間介紹
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown4">
