--- a/MakerCenter/staticfiles/scss/all.css
+++ b/MakerCenter/staticfiles/scss/all.css
@@ -7295,7 +7295,7 @@ section {
       content: "";
       flex: 1 1;
       border-bottom: 4px solid white;
-      margin: auto; }
+      margin: auto auto auto 30px; }
   .about-us-bg-primary .title {
     font-size: 60px;
     margin-top: 60px; }
@@ -7382,10 +7382,22 @@ section {
   bottom: 0;
   color: white; }
 
+.professional .img-fluid {
+  width: 70%;
+  height: 70%; }
+
+.professional .new-tech .text-right .text-dark {
+  margin-right: 15%;
+  line-height: 5rem; }
+
 @media (max-width: 576px) {
   .convener {
     height: 50% !important; }
   .new-tech {
-    margin-top: 600px; } }
+    margin-top: 600px; }
+    .new-tech .img-fluid {
+      width: 100%; }
+    .new-tech .text-right .text-dark {
+      margin-right: 0px !important; } }
 
 /*# sourceMappingURL=../../../../static/scss/all.css.map */
