--- a/MakerCenter/staticfiles/scss/all.css
+++ b/MakerCenter/staticfiles/scss/all.css
@@ -7400,4 +7400,4 @@ section {
     .new-tech .text-right .text-dark {
       margin-right: 0px !important; } }
 
-/*# sourceMappingURL=../../../../static/scss/all.css.map */
+/*# sourceMappingURL=all.css.map */
