--- a/FrontEnd/templates/FrontEnd/members_intro/members_intro.html
+++ b/FrontEnd/templates/FrontEnd/members_intro/members_intro.html
@@ -20,6 +20,7 @@
         <thead>
             <tr class="bg-danger" style="height: auto; ">
                 <th style="width: 11%;" class="type-3">姓名</th>
+                <th style="width: 20%;" class="type-2">照片</th>
                 <th style="width: 20%;" class="type-2">分機</th>
                 <th style="width: 24%;">信箱</th>
                 <th style="width: 27%;">業務職掌</th>
